--- a/De101.html
+++ b/De101.html
@@ -1,5 +1,7 @@
 ﻿<html>
     <head>
+        <script scr="http://js.leapmotion.com/leap-0.6.3.min.js"></script>
+        <script scr="leaopIfiniteLoop.js"></script>
     </head>
     <body>
         <main>
