--- a/De101.html
+++ b/De101.html
@@ -1,7 +1,9 @@
 ﻿<html>
     <head>
-        <script scr="http://js.leapmotion.com/leap-0.6.3.min.js"></script>
-        <script scr="leaopIfiniteLoop.js"></script>
+        <script src="http://js.leapmotion.com/leap-0.6.3.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
+        <script src="leapInfiniteLoop.js"></script>
+        <script src="prepareToDraw.js"></script>
     </head>
     <body>
         <main>
