--- a/PredictGestures.html
+++ b/PredictGestures.html
@@ -5,13 +5,62 @@
     <script src="https://cdn.jsdelivr.net/gh/nicolaspanel/numjs@0.15.1/dist/numjs.min.js"></script>
     <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
     <script src="PredictGestures.js"></script>
+    <script src="train0Allison.js"></script>
+    <script src="train1Davis.js"></script>
+    <script src="train2Neff.js"></script>
+    <script src="train3Li.js"></script>
     <script src="train4.js"></script>
     <script src="train6.js"></script>
+    <script src="train5Bongard.js"></script>
+    <script src="train7Fisher.js"></script>
+    <script src="train8Potts.js"></script>
+    <script src="train9Bongard.js"></script>
+
+    <script src="train0Bongard.js"></script>
+    <script src="train1Bongard.js"></script>
+    <script src="train2Bongard.js"></script>
+    <script src="train3Bongard.js"></script>
+    <script src="train4Bongard.js"></script>
+    <script src="train6Bongard.js"></script>
+    <script src="train5OConnor.js"></script>
+    <script src="train7Bongard.js"></script>
+    <script src="train8Bongard.js"></script>
+    <script src="train9JClark.js"></script>
+
+    <script src="train0KLee.js"></script>
+    <script src="train1Allison.js"></script>
+    <script src="train2Downs.js"></script>
+    <script src="train3Downs.js"></script>
+    <script src="train4Kiely.js"></script>
+    <script src="train6Fisher.js"></script>
+    <script src="train5Kiely.js"></script>
+    <script src="train7Vega.js"></script>
+    <script src="train8JClark.js"></script>
+    <script src="train9Vega.js"></script>
+
+    <script src="train0Wills.js"></script>
+    <script src="train1Jimmo.js"></script>
+    <script src="train2Jimmo.js"></script>
+    <script src="train3Jing.js"></script>
+    <script src="train4Faucher.js"></script>
+    <script src="train6Fekert.js"></script>
+    <script src="train5Faucher.js"></script>
+    <script src="train7Manian.js"></script>
+    <script src="train8Wills.js"></script>
+    <script src="train9Woolley.js"></script>
+
     <script src="prepareToDraw.js"></script>
 </head>
     <body>
         <main>
             Hello World!
+            <form id="myform">
+                <input id="username" type="text" name="username" placeholder="name">
+                <button onclick="return SignIn();" type="submit">Sign in</button>
+            </form>
         </main>
+        <ul id="users">
+            <li>user1</li>
+        </ul>
     </body>
 </html>
